tests/NormalTests/paczka1/fuzzy1/10785256.err
Error in line 5: c66kKWGc A711 49,8
Error in line 12: 5SYdldHXW A711 37,9
Error in line 16: lf0H S702 67,0
Error in line 34: KFI A187 77,0
